# nwt_downloaner

./: Cargo.toml  books.js  books.json  booksFormater.ts  getBlile.js  getBlile.ts  package-lock.json  package.json  pnpm-lock.yaml  test.js  type.ts
src/: books.json  main.rs  serde_type.rs
