[package]
name = "nwt_downloaner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
html_parser = "0.7.0"
reqwest = { version = "0.11.0", features = ["json", "blocking"] }
serde = "1.0.119"
serde_derive = "1.0.197"
serde_json = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tokio-macros = { version = "0.2.0-alpha.6" }
